added social icons and GA

--- a/index.html
+++ b/index.html
@@ -26,6 +26,36 @@
           <div id="bundeslaender_container">
           </div>
       </div>
+      </div>
+      <div class="row">
+        <div class="span6">
+        <h3>Code on Github</h3>
+        <iframe src="http://ghbtns.com/github-btn.html?user=milafrerichs&repo=eeg_unternehmen&type=watch"
+          allowtransparency="true" frameborder="0" scrolling="0" width="62" height="20"></iframe>
+          <h3>Social</h3>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-lang="de">Twittern</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+          <a href="https://twitter.com/mila_frerichs" class="twitter-follow-button" data-show-count="false" data-lang="de">@mila_frerichs folgen</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      </div>
+        <div class="span6">
+          <h4>Quellen:</h4>
+          <p>EEG-Unternehmensangaben: <a href="https://fragdenstaat.de/anfrage/nennung-der-von-der-eeg-umlage-befreiten-betriebe/">Frag den Staat</a></p>
+          
+      </div>
     </div>
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-367775-13']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    </script>
   </body>
 </html>
