--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <link href="stylesheets/bootstrap.min.css" rel="stylesheet" media="screen">
     
-     <title></title>
+     <title>Von der EEG Umlage befreite Unternehmen</title>
   </head>
   <body>
     <div class="container">
