added top 20 companies and timeline

--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
           <h4 id="bundeslaender_branche">alle Branchen</h4>
           <div id="bundeslaender_container">
           </div>
+        </div>
       </div>
+      <div class="row">
+        <div class="span6">
+          <h4>Gesamtzahl befreiter Unternehmen und deren Gesamtverbrauch (in GwH) 2010-2013</h4>
+          <div id="gesamt_line"></div>
+          <p>Zahlen für 2013: Anträge</p>
+        </div>
+        <div class="span6">
+          <h4>Top 20 Unternehmen</h4>
+          <div id="top_20" class="table"></div>
+        </div>
       </div>
       <div class="row">
         <div class="span6">
